tests/files/flow_controller_tests/should_fail/034.cmdr
x = true;
print floor(x);